--- a/style.css
+++ b/style.css
@@ -73,13 +73,7 @@ body{
     transform: scale(2);
     padding-left: 20px;
 }
-//.second-nav-bar nav .navbar-brand img
-{
-    width: 100%;
-    height: 100px;
-    overflow: hidden;
-    transform: scale(3);
-}
+
 
 .second-nav-bar nav li{
     padding-right: 20px;
@@ -102,12 +96,16 @@ body{
 {
     position: relative;
     width: 100%;
-    background-image: url("image/2.jpg");
+    background-image: linear-gradient(to bottom, rgba(240, 240, 240,0), rgb(240, 240, 240,.7)), url("image/2.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     height: 100vh;
+    //background-image: linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,.1));
 }
+
+
+
 
 .main-area .hero-section .Think-area
 {
@@ -115,14 +113,39 @@ body{
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
-    background-image: linear-gradient(rgba(202,206,209, 0.8),rgba(202,206,209, 0.8));
+    background-image: linear-gradient(rgba(184, 194, 194, 0.3),rgba(184, 194, 199, 0.3));
     width:100%;
+    box-shadow: 0px 0px 3px 3px  white inset;
+}
+
+
+.main-area .hero-section .Think-area
+{
+    overflow: hidden;
+    position: relative;
+}
+
+.Think-area::after{
+    content: "";
+    width: 103%;
+    height: 103%;
+    background:inherit;
+    position: absolute;
+    top:0;
+    left:-10px;
+    filter: blur(3px);
+}
+
+.main-area .hero-section .Think-area .inner-text
+{
+    position: relative;
+    z-index: 5;
 }
 
 .hero-section .Think-area .inner-text
 {
     text-align: center;
-    color:#FDFFFF;
+    color:#ffffff;
     padding: 60px 0px;
     
 }
@@ -144,6 +167,7 @@ body{
     left:50%;
     transform: translate(-50%,-5%);
     color:white;
+    z-index: 10;
 
 }
 
@@ -160,7 +184,7 @@ body{
     color: white;
     font-size: 20px;
     background-color: transparent;
-    border: 2px solid white;
+    border: 1.5px solid white;
     border-radius: 50px;
     box-shadow: -20px -20px 20px 15px 5px white;
     box-shadow: 0px 0px 3px 3px white;
@@ -265,7 +289,7 @@ body{
 }
 
 .main-area .about-us .read-more a{
-    padding: 15px 40px ;
+    padding: 10px 40px ;
     background-color: #05639F;
     border-radius: 50px;
     color: #FFFFFF;
@@ -274,7 +298,7 @@ body{
 
 .main-area .about-us .read-more a:hover
 {
-  border: 2px solid #05639F ;
+  border: 1.5px solid #05639F ;
   background-color: transparent;
   color:#05639F;
   transition: .2s ease-in ;
@@ -296,7 +320,7 @@ body{
 .main-area .service
 {
     width: 100%;
-    background-image: url("image/4.jpg");
+    background-image: url("image/4.png");
     background-repeat: no-repeat;
     background-size: cover;
     
@@ -347,7 +371,7 @@ body{
     height: 100%;
     overflow: hidden;
     position: relative;
-    background-image: url("image/5.jpg");
+    background-image: url("image/5.png");
     background-repeat: no-repeat;
     background-size: cover;
     padding: 60px 0px 60px 0px;
@@ -378,8 +402,9 @@ body{
 
 .expertise-section .expertise-row
 {
-    background-color:rgba(183,203,210,.8);
+    background-color:rgba(183,203,210,.5);
     padding: 60px;
+    border: 2px solid rgba(138, 134, 134,.3);
 }
 
 
@@ -387,16 +412,326 @@ body{
 .expertise-section .inner-img img
 {
     width: 100%;
-
+    min-height: 200px;
+    transform: scale(1);
+    max-height: 200px;
+    object-fit: cover;
 }
 
 .expertise-section p{
     margin-top: 20px;
+    color: white;
     text-align: justify;
 }
 
 
 
+
+
+/*-------------------------------- lates-news-section----------------------------------*/
+
+.latest-news-section
+{
+    width: 100%;
+    padding: 60px 0px 30px 0px !important;
+}
+
+.latest-news-section .row .left-imag img
+{
+    width: 70%;
+    height: 300px;
+    object-fit: cover;
+
+}
+
+
+.latest-news-section h3{
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+.latest-news-section .read-more
+{
+    padding-top: 41px;
+}
+
+.latest-news-section .news-imag-1
+{
+    display:  flex;
+    padding-top: 20px;
+    
+}
+.latest-news-section .news-imag-1 img
+{
+   
+    width: 100%; 
+    max-height: 200px;  
+    //object-fit: fill;
+    object-fit: cover;
+}
+
+.latest-news-section .big-img img
+{
+    
+    max-width: 50%; 
+    max-height: 200px;  
+    //object-fit: fill;
+    object-fit: cover;
+} 
+
+
+.latest-news-section .news-imag-1 .text-area
+{
+    padding: 0px 0px 0px 10px;
+}
+
+/*-------------------------------------------------------- Contact Us ----------------------------*/
+
+
+//.contact-us
+{
+    width: 100%;
+    height: 100vh;
+    max-height: 100%;
+    background:url("image/15.png") no-repeat left, url("image/14.png") right no-repeat, 
+    background-size: 50%,50%;
+}
+
+.contact-us-1
+{
+    width: 100%;
+    //height: 100vh;
+    background-image: url("image/15.png"),linear-gradient(rgba(148, 148, 151, 0.5),rgba(148, 148, 151, 0.5));
+    background-size: 40%;
+    background-position: left;
+    background-repeat: no-repeat;
+    object-fit: fill;
+}
+
+
+.contact-us-2
+{
+    width: 100%;
+    padding: 50px 0px;
+    //min-height: 100vh;
+    background-image: url("image/14.png"),linear-gradient(rgba(37, 85, 189, 0.9),rgba(37, 85, 189, 0.9));
+    background-size: 60%;
+    background-size:60% 100%;
+    background-position: right;
+    background-repeat: no-repeat;
+    object-fit:cover;
+    position: relative;
+}
+
+
+.contact-us-1 .inner-contact-us h2
+{
+    font-weight: bold;
+    padding: 0px 50px;
+    
+}
+
+.contact-us-1 .white-area
+{
+    background-color: white;
+    width: 300px;
+    padding: 30px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    top:20%;
+    left:35%;
+    box-shadow: 0px 0px 3px 3px  white;
+
+}
+
+.contact-us-1 .contact-card .white-area h2
+{
+    color:#05639F;
+    font-weight: bold;
+}
+
+.contact-us-1 p
+{
+    padding: 0px 30px;
+    text-align: justify;
+    color:white;
+    font-size: 17px;
+}
+
+.contact-us-1 .contact-us-button
+{
+    display: flex;
+    justify-content: center;
+}
+
+.contact-us-1 .contact-us-button a{
+    padding: 10px 40px;
+    border-radius: 50px;
+    font-weight: bold;
+    text-decoration: none;
+    background-color:white;
+}
+
+.contact-us-1 .contact-us-button a:hover
+{
+     background-color: transparent;
+     border:1.5px solid white;
+     color:white;
+}
+
+
+/*---------------------------------------------------------footer section-----------------------------------------------------------*/
+
+.footer-section
+{
+    background-color: #2298B2;
+}
+
+.footer-section .inner-footer
+{
+    padding: 50px 50px;
+}
+
+.footer-section .inner-footer img
+{
+    width: 150px;
+    height: 100px;
+    //overflow: hidden;
+    object-fit: fill;
+    transform: scale(1.5);
+    //padding-left: 20px;
+    color:white;
+}
+
+.footer-section .inner-footer ul
+{
+    display: block;
+
+}
+
+.footer-section .inner-footer ul li
+{
+    list-style: none;
+    margin: 5px 0px;
+}
+
+.footer-section .inner-footer ul li a
+{
+   text-decoration: none;
+   color: white;
+   font-size: 20px;
+} 
+
+.footer-section .inner-footer ul .social-links a
+{
+   margin: 5px;
+}
+
+.footer-section .inner-footer ul .social-links a i
+{
+    padding: 5px;
+    border-radius: 50%;
+    border: 2px solid white;
+}
+.footer-section .inner-footer ul li p{
+    color:white;
+    text-align: left;
+}
+
+.footer-section .inner-footer .footer-about
+{
+   font-size: 30px;
+   font-weight: bold;
+}
+
+.footer-section .inner-footer ul .form-control
+{
+    background-color: transparent !important;
+    border:none !important;
+    box-shadow: none;
+    border-radius: unset;
+    border-bottom: 2px solid white !important;
+}
+
+.footer-section .inner-footer ul .form-control::placeholder
+{
+    color:white;
+}
+
+.footer-section .inner-footer ul input[type=text]
+{
+    color:white;
+}
+
+.wrapper { position: relative; }
+
+i.fa-envelope 
+{ 
+    position: absolute; 
+    top: 10px; 
+    right: 0; 
+    color: #F84B80;
+    font-size: 25px;
+}
+
+.footer-section .last-p
+{
+    text-align: center;
+    color:white;
+}
+
+.footer-section .last-line
+{
+    height: 2px;
+    width: 100%;
+    background-color:white ;
+}
+/*------------------------------ Copy right section-------------------------------------------------*/
+.footer-section .copy-right-footer
+{
+    width: 100%;
+}
+.footer-section .copy-right-footer .copy-right-text
+{
+    padding: 20px 0px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+
+}
+
+.footer-section .copy-right-footer .copy-right-text span
+{
+    color: white;
+}
+
+.footer-section .copy-right-footer .copy-right-text span a
+{
+    color:white;
+}
+/************************************************* top scroll buttt *****************************************/
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+  
+  #myBtn:hover {
+    background-color: #555;
+  }
 @media only screen and (max-width: 992px)
 {
 
@@ -433,6 +768,16 @@ body{
     padding-left: 20px;
     //display: block;
     
+}
+
+
+.second-nav-bar .logo-manag img
+{
+    width: 150;
+    height: 100px;
+    overflow: hidden;
+    transform: scale(1.5);
+    padding-left: 15px;
 }
 
 
@@ -502,6 +847,65 @@ body{
 {
     margin-top: 15px;
 }
+
+.latest-news-section .row .left-imag img
+{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+
+}
+
+
+.latest-news-section .news-imag-1
+{
+    display: block;
+    margin-top: 20px;
+}
+
+.latest-news-section .news-imag-1 img
+{
+   
+    width: 100%; 
+    max-height: 300px;  
+    //object-fit: fill;
+    object-fit: cover;
+}
+
+.latest-news-section .big-img img
+{
+    max-width: 100% !important; 
+}
+
+.latest-news-section .news-imag-1 .text-area
+{
+    padding-top: 20px;
+}
+
+.contact-us-1 .white-area
+{
+    background-color: white;
+    width: 300px;
+    padding: 30px;
+    text-align: unset;
+    margin-left:auto;
+    margin-right: auto;
+    position: unset;
+    top:unset;
+    left:unset;
+
+}
+
+
+
+
+.contact-us-1 .contact-card
+{
+    padding: 20px 0px;
+
+}
+
+
 
 
 } 
