--- a/style.css
+++ b/style.css
@@ -91,21 +91,18 @@ body{
 
 /*------------------- Hero  section --------------*/
 
-
 .main-area .hero-section
 {
     position: relative;
     width: 100%;
-    background-image: linear-gradient(to bottom, rgba(240, 240, 240,0), rgb(240, 240, 240,.7)), url("image/2.png");
+    background-image: linear-gradient(to bottom, rgba(201, 32, 32, 0), rgb(240, 240, 240,.7)), url("image/main.jpeg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    object-fit: cover;
     height: 100vh;
     //background-image: linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,.1));
 }
-
-
-
 
 .main-area .hero-section .Think-area
 {
@@ -319,12 +316,30 @@ body{
 
 .main-area .service
 {
+    //padding: 60px 0px 60px 0px;
     width: 100%;
-    background-image: url("image/4.png");
+    //height: 100vh;
+    padding: 50px 0px;
+    background-image: url("image/img.png");
+    //background-size: 60%;
+    background-size:100% 100%;
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-    
+    object-fit:cover;
+}
+
+//.main-area .service-1
+{
     padding: 60px 0px 60px 0px;
+    width: 100%;
+    //padding: 50px 0px;
+    background-image: url("image/16.jpg");
+    //background-size: 60%;
+    background-size:50% 100%;
+    background-position: right;
+    background-repeat: no-repeat;
+    //transform:rotate(360deg);
+    object-fit:cover;
 }
 
 
@@ -371,12 +386,13 @@ body{
     height: 100%;
     overflow: hidden;
     position: relative;
-    background-image: url("image/5.png");
+    background-image: url("image/5.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     padding: 60px 0px 60px 0px;
 
 }
+
 
 .expertise-section h2{
     color:white;
@@ -489,14 +505,7 @@ body{
 /*-------------------------------------------------------- Contact Us ----------------------------*/
 
 
-//.contact-us
-{
-    width: 100%;
-    height: 100vh;
-    max-height: 100%;
-    background:url("image/15.png") no-repeat left, url("image/14.png") right no-repeat, 
-    background-size: 50%,50%;
-}
+
 
 .contact-us-1
 {
@@ -515,12 +524,12 @@ body{
     width: 100%;
     padding: 50px 0px;
     //min-height: 100vh;
-    background-image: url("image/14.png"),linear-gradient(rgba(37, 85, 189, 0.9),rgba(37, 85, 189, 0.9));
+    background-image: url("image/14.png"),linear-gradient(rgba(37, 85, 189, 0.5),rgba(37, 85, 189, 0.5));
     background-size: 60%;
-    background-size:60% 100%;
+    background-size:60% auto;
     background-position: right;
     background-repeat: no-repeat;
-    object-fit:cover;
+    //object-fit:cover;
     position: relative;
 }
 
@@ -643,7 +652,7 @@ body{
 
 .footer-section .inner-footer .footer-about
 {
-   font-size: 30px;
+   font-size: 25px;
    font-weight: bold;
 }
 
