--- a/style.css
+++ b/style.css
@@ -483,7 +483,6 @@ body{
    
     width: 100%; 
     max-height: 200px;  
-    //object-fit: fill;
     object-fit: cover;
 }
 
@@ -510,12 +509,12 @@ body{
 .contact-us-1
 {
     width: 100%;
-    //height: 100vh;
+    min-height: 100vh;
     background-image: url("image/15.png"),linear-gradient(rgba(148, 148, 151, 0.5),rgba(148, 148, 151, 0.5));
-    background-size: 40%;
+    background-size: 40% 100%;
     background-position: left;
     background-repeat: no-repeat;
-    object-fit: fill;
+    object-fit:cover;
 }
 
 
@@ -523,14 +522,14 @@ body{
 {
     width: 100%;
     padding: 50px 0px;
-    //min-height: 100vh;
+    min-height: 100vh;
     background-image: url("image/14.png"),linear-gradient(rgba(37, 85, 189, 0.5),rgba(37, 85, 189, 0.5));
-    background-size: 60%;
-    background-size:60% auto;
+    background-size:60% 100%;
     background-position: right;
     background-repeat: no-repeat;
     //object-fit:cover;
-    position: relative;
+    object-fit:contain;
+
 }
 
 
@@ -767,6 +766,20 @@ i.fa-envelope
 }
 
 
+.contact-us-1 .white-area
+{
+    background-color: white;
+    width: 300px;
+    padding: 30px;
+    text-align: unset;
+    margin-right: auto;
+    position: absolute;
+    top:20%;
+    left:unset;
+
+}
+
+
 }
 
 @media only screen and (max-width: 768px)
@@ -910,8 +923,36 @@ i.fa-envelope
 
 .contact-us-1 .contact-card
 {
-    padding: 20px 0px;
+    padding: 40px 0px;
 
+}
+
+
+
+
+.contact-us-1
+{
+    width: 100%;
+    //height: 100vh;
+    background-image: url("image/15.png"),linear-gradient(rgba(148, 148, 151, 0.5),rgba(148, 148, 151, 0.5));
+    background-size: 100% 40%;
+    background-position: top;
+    background-repeat: no-repeat;
+    object-fit: fill;
+}
+
+
+.contact-us-2
+{
+    width: 100%;
+    padding: 50px 0px;
+    //min-height: 100vh;
+    background-image: url("image/14.png"),linear-gradient(rgba(37, 85, 189, 0.5),rgba(37, 85, 189, 0.5));
+    background-size:100% 60%;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    object-fit:cover;
+    object-fit:contain;
 }
 
 
