--- a/style.css
+++ b/style.css
@@ -57,6 +57,8 @@ body{
     margin-top: -16px;
     width: 100%;
     background-color: #F3F3F3;
+ 
+    
 }
 
 .second-nav-bar .logo-manag
@@ -137,14 +139,38 @@ body{
 {
     position: relative;
     width: 100%;
-    background-image: linear-gradient(to bottom, rgba(201, 32, 32, 0), rgb(240, 240, 240,.7)), url("image/main.jpeg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    object-fit: cover;
-    height: 100vh;
+    background-color: linear-gradient(to bottom, rgba(201, 32, 32, 0), rgb(240, 240, 240,.7));
+    //background-repeat: no-repeat;
+    //background-position: center;
+    //background-size: cover;
+    //object-fit: cover;
+    //height: 100vh;
+    
     //background-image: linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,.1));
 }
+
+
+.main-area .hero-section .carousel img{
+   
+    
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    object-fit: fill;
+    
+
+}
+
+//.main-area .hero-section .carousel .carousel-inner::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+    background-image: linear-gradient(to bottom, rgba(201, 32, 32, 0), rgb(240, 240, 240,.7));
+  }
 
 .main-area .hero-section .Think-area
 {
@@ -203,7 +229,7 @@ body{
 {
 
     position: absolute;
-    bottom: 0%;
+    bottom: 10%;
     left:50%;
     transform: translate(-50%,-5%);
     color:white;
@@ -279,7 +305,7 @@ body{
 
 .main-area .about-us
 {
-    padding: 100px 0px 200px 0px;
+    padding: 100px 0px 100px 0px;
     box-shadow: 0px -5px 5px rgba(239, 241, 242,0.7);
 
 }
