--- a/style.css
+++ b/style.css
@@ -156,12 +156,12 @@ body{
     width: 100%;
     height: 100vh;
     position: relative;
-    object-fit: fill;
+    object-fit: cover;
     
 
 }
 
-//.main-area .hero-section .carousel .carousel-inner::before {
+.main-area .hero-section .carousel .carousel-inner::before {
     content: "";
     position: absolute;
     bottom: 0;
