--- a/style.css
+++ b/style.css
@@ -84,7 +84,8 @@ body{
     //padding-left: 20px;
     //object-fit: fill;
     object-fit:cover;
-    object-fit:fill;
+    object-fit:contain;
+
 }
 
 
@@ -229,7 +230,7 @@ body{
     //color:#2298B2;
     padding: 60px 0px;
     //position: absolute;
-    //z-index: 10;
+    z-index: 10;
     font-family: 'Trajan Pro'; 
 }
 .main-area .hero-section .Think-area .inner-text h2
@@ -795,7 +796,7 @@ border: 1.5px solid #05639F;;
 
 .footer-section .inner-footer
 {
-    padding: 70px 50px;
+    padding: 70px 40px;
 }
 
 .footer-section .inner-footer img
@@ -804,9 +805,19 @@ border: 1.5px solid #05639F;;
     height: 100px;
     //overflow: hidden;
     object-fit: cover;
-    transform: scale(1.5);
+    //transform: scale(1.5);
     //padding-left: 20px;
     color:white;
+    width: 160px;
+    //.logo-manag
+    height: 100px;
+    overflow: hidden;
+    transform: scale(1.3);
+    //padding-left: 20px;
+    //object-fit: fill;
+    object-fit:cover;
+    //object-fit:fill;
+    //object-fit:contain;
 }
 
 .footer-section .inner-footer ul
@@ -818,7 +829,7 @@ border: 1.5px solid #05639F;;
 .footer-section .inner-footer ul li
 {
     list-style: none;
-    margin: 10px 0px;
+    margin: 5px 0px;
 }
 
 .footer-section .inner-footer ul li a
@@ -842,18 +853,19 @@ border: 1.5px solid #05639F;;
 .footer-section .inner-footer ul li p{
     color:white;
     text-align: left;
+    font-size: 15px;
 }
 
 .footer-section .inner-footer .footer-about
 {
-   font-size: 20px;
+   font-size: 17px;
    font-weight: bold;
 }
 
 .footer-section .inner-footer .mtss-4
 {
     //margin-top: 20px !important;
-    padding-top: 35px;
+    padding-top: 40px;
 }
 
 .footer-section .inner-footer ul .form-control
@@ -868,6 +880,8 @@ border: 1.5px solid #05639F;;
 .footer-section .inner-footer ul .form-control::placeholder
 {
     color:white;
+    font-size: 15px;
+  ;
 }
 
 .footer-section .inner-footer ul input[type=text]
